tdf#103829 ods import: parse <text:tab/>

regression since LO 4.1

Change-Id: I65e847a45b8b233c558bf7bc90b554ba8b4b7763
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139757
Tested-by: Justin Luth <jluth@mail.com>
Reviewed-by: Justin Luth <jluth@mail.com>